quizz coeur et modal

--- a/Quizz/quizz.html
+++ b/Quizz/quizz.html
@@ -29,7 +29,11 @@
           <button class="start-button">start</button>
         </div>
         <span class="indicator hidden"></span>
-      </section>
+    </section>
+
+    <div id="answers-div">
+    </div>
 </body>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
 <script src="app.js"></script>
 </html>
