:sparkles: Konami code

--- a/index.html
+++ b/index.html
@@ -3,18 +3,13 @@
     <head>
         <meta charset="utf-8"/>
         <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
-        <title>Document html</title>
-        <link rel="stylesheet" type="text/css" href="style.css"/>
+        <title>Konami Code</title>
     </head>
-    <body class="layout ToujourDansLexces">
-        <h1 class="opa">Coucou</h1>
+    <body>
+        
+        <p>Coucou</p>
+        <p>Je suis un paragraphe</p>
 
-        <a href="" class="fuite opa">Click sur moi</a>
-
-        <img id="explosion" src="explosion.gif" alt=""/>
-        <script type="text/javascript" src="Ux-cachemardesque.js"></script>
-        <script type="text/javascript" src="popup.js"></script>
-        <script type="text/javascript" src="explosion.js"></script>
-        <script type="text/javascript" src="Exces.js"></script>
+        <script type="text/javascript" src="konami.js"></script>
     </body>
 </html>
