page d'accueil presque finie

--- a/accueil.html
+++ b/accueil.html
@@ -68,7 +68,7 @@
             </div>
 
             <div class="row">
-                
+
 
                 <div class="container3">
 
@@ -101,14 +101,19 @@
 
         <section id="section_cartes">
 
-            <div id="haut row_cartes">
-                <div class="carte"></div>
+            <div class="haut row_cartes">
+                <div class="carte">
+                    <div class="haut_carte">
+                        <div class="img_carte"></div>
+                    </div>
+                    <div class="bas_carte"></div>
+                </div>
                 <div class="carte"></div>
                 <div class="carte"></div>
             </div>
 
 
-            <div id="bas row_cartes">
+            <div class="row_cartes">
                 <div class="carte"></div>
                 <div class="carte"></div>
             </div>
