final commit for the API

--- a/index.html
+++ b/index.html
@@ -1,18 +1,23 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
+
 <body>
 
     <select name="Languages" id="Languages"></select>
-    
-    <h1 id="title1" >Bienvenue sur notre site</h1>
+
+    <h1 id="title1">Bienvenue sur notre site</h1>
     <p id="paragraph1"> Aujourd'hui, nous sommes à la nuit de l'info !</p>
 
 </body>
+
+<script src="https://cdn.jsdelivr.net/npm/js-cookie@3.0.1/dist/js.cookie.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
 <script type="module" src="./script.js"></script>
+
 </html>
