--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         <p class="score"> Score : 0 </p>
         <img class="Earty" src="Christmas-earty.svg">
     </div>
-
+    <script type="text/javascript" src="konami.js"></script>
     <script src="script.js"></script>
 </body>
 </html>
