accueil fini sans liens et nav

--- a/accueil.html
+++ b/accueil.html
@@ -59,6 +59,7 @@
                         CO2
                         dans
                         ce secteur, ce qui est énorme ! P</p>
+
                 </div>
 
                 <img src="img/1.svg" alt="" class="cadre ">
@@ -102,20 +103,75 @@
         <section id="section_cartes">
 
             <div class="haut row_cartes">
-                <div class="carte">
-                    <div class="haut_carte">
-                        <div class="img_carte"></div>
+                <a href="transport.html">
+                    <div class="carte">
+                        <div class="haut_carte">
+                            <div class="img_carte"><img src="img/avion.svg" alt=""></div>
+                        </div>
+                        <div class="bas_carte">
+                            <h2>Transport</h2>
+                            <p class="mb">En France, près d’un quart de la pollution vient...</p>
+                        </div>
                     </div>
-                    <div class="bas_carte"></div>
-                </div>
-                <div class="carte"></div>
-                <div class="carte"></div>
+                </a>
+
+
+                <a href="transport.html">
+                    <div class="carte">
+                        <div class="haut_carte">
+                            <div class="img_carte"><img src="img/bouteille.svg" alt=""></div>
+                        </div>
+                        <div class="bas_carte">
+                            <h2>Consommation
+                                d’eau</h2>
+                            <p class="mb">La pollution de l’eau est un problème qui nous...</p>
+                        </div>
+                    </div>
+                </a>
+                <a href="transport.html">
+                    <div class="carte">
+                        <div class="haut_carte">
+                            <div class="img_carte"><img src="img/pc.svg" alt=""></div>
+                        </div>
+                        <div class="bas_carte">
+                            <h2>Énergie Numérique</h2>
+                            <p class="mb">Aujourd’hui, une partie de la pollution mondiale vient...</p>
+                        </div>
+                    </div>
+                </a>
+
+
+
+
+
+
+
             </div>
 
 
             <div class="row_cartes">
-                <div class="carte"></div>
-                <div class="carte"></div>
+                <a href="transport.html">
+                    <div class="carte">
+                        <div class="haut_carte">
+                            <div class="img_carte"><img src="img/sac.svg" alt=""></div>
+                        </div>
+                        <div class="bas_carte">
+                            <h2>Plastique</h2>
+                            <p class="mb">Chaque année, environ 8 millions de tonnes...</p>
+                        </div>
+                    </div>
+                </a>
+                <a href="transport.html">
+                    <div class="carte">
+                        <div class="haut_carte">
+                            <div class="img_carte"><img src="img/burger.svg" alt=""></div>
+                        </div>
+                        <div class="bas_carte">
+                            <h2>Alimentation</h2>
+                            <p class="mb">L'élevage intensif menace le climat avec...</p>
+                        </div>
+                    </div>
+                </a>
             </div>
 
         </section>
