--- a/transport.html
+++ b/transport.html
@@ -15,6 +15,7 @@
 
 <body><img src="img/circle1.svg" alt="" id="cercle_1">
     <img src="img/elp.svg" alt="" id="cercle_2" class="trp_rose">
+    <img src="img/PLANE.svg" alt=""  class="plane">
     <main>
 
         <section class="container">
@@ -33,14 +34,14 @@
                 <h1 class="transport">Transport</h1>
                 <div class="container3">
 
-                    <h2>Problèmes</h2>
+                    <h2 id="size">Problèmes</h2>
                     <p>En France, près d’un quart de la pollution vient des transports, 27% en 2014 pour être précis. Les transports routiers, comme la voiture ou les camions, concernent plus de 90% des émissions de CO2 dans ce secteur, ce qui est énorme ! Pour régler cela, il faudrait que la transition énergétique de ce secteur concerne les marchandises ainsi que les déplacements personnels, comme les voyages ou encore les trajets du quotidien.</p>
                 </div>
 
                 <div class="container3">
 
-                    <h2>Solutions</h2>
-                    <p>En France, près d’un quart de la pollution vient des transports, 27% en 2014 pour être précis. Les transports routiers, comme la voiture ou les camions, concernent plus de 90% des émissions de CO2 dans ce secteur, ce qui est énorme ! Pour régler cela, il faudrait que la transition énergétique de ce secteur concerne les marchandises ainsi que les déplacements personnels, comme les voyages ou encore les trajets du quotidiens.</p>
+                    <h2 id="size">Solutions</h2>
+                    <p>Par exemple, pour un trajet Paris-Marseille, une personne prenant un TGV émet 1,7 kg de CO2 tandis qu’une personne prenant l’avion émet 152 kg de CO2. Il est donc impératif de se passer des véhicules utilisant des énergies fossiles et de passer à des moyens de transports écologiquement corrects. </p>
                 </div>
                 
             </div>
