--- a/accueil.html
+++ b/accueil.html
@@ -53,12 +53,9 @@
             <div class="row">
                 <div class="container2">
                     <h2>Comprendre l’urgence climatique</h2>
-                    <p>En France, près d’un quart de la pollution vient des transports, 27% en 2014 pour être précis.
-                        Les
-                        transports routiers, comme la voiture ou les camions, concernent plus de 90% des émissions de
-                        CO2
-                        dans
-                        ce secteur, ce qui est énorme ! P</p>
+                    <p>Depuis plus d’un siècle, les activités humaines ont modifié la composition de l’atmosphère, entraînant ainsi un changement climatique inédit. Les effets de ce réchauffement climatique sont à présent visibles à l’échelle de la planète.
+                        Notre système climatique repose sur un équilibre très fragile. Cet équilibre est mis en danger par les émissions de gaz à effet de serre liées aux activités humaines.
+                        </p>
                 </div>
 
                 <img src="img/1.svg" alt="" class="cadre ">
@@ -73,11 +70,10 @@
                 <div class="container3">
 
                     <h2>Comprendre l’urgence climatique</h2>
-                    <p>En France, près d’un quart de la pollution vient des transports, 27% en 2014 pour être précis.
-                        Les
-                        transports routiers, comme la voiture ou les camions, concernent plus de 90% des émissions de
-                        CO2 dans
-                        ce secteur, ce qui est énorme ! P</p>
+                    <p>La température moyenne mondiale a augmenté de 1,1°C
+                        Le GIEC montre que le réchauffement est sans précédent depuis les 2000 dernières années, et qu’il continue de s'accélérer :
+                        La température moyenne terrestre a augmenté de 1,1°C entre 1850-1900 et 2010-2020 ;
+                        Chacune des quatre dernières décennies (1980-1990 / 1990-2000 / 2000-2010 / 2010-2020) a été plus chaude que la précédente.</p>
                 </div>
 
                 <img src="img/2.svg" alt="" class="cadre ">
@@ -87,11 +83,9 @@
             <div class="row">
                 <div class="container4">
                     <h2>Mais 1 degré de réchauffement, est-ce si grave ?</h2>
-                    <p>En France, près d’un quart de la pollution vient des transports, 27% en 2014 pour être précis.
-                        Les
-                        transports routiers, comme la voiture ou les camions, concernent plus de 90% des émissions de
-                        CO2 dans
-                        ce secteur, ce qui est énorme ! P </p>
+                    <p>Contrairement aux idées reçues, il faut faire la différence entre la météo (le temps qu’il fait à un moment et à un endroit donné, qui connaît des variation d’un jour à l’autre), et le climat, l’étude des statistiques de variables atmosphériques à moyen et long terme (par convention, sur des périodes de 30 ans).
+                        Si 5°C d’écart dans une même journée sont fréquents et sans incidence sur notre vie, 5°C de variation de la température moyenne terrestre correspondent au réchauffement qui a fait sortir l’Europe de la dernière ère glaciaire… il y a 20 000 ans !
+                        </p>
                 </div>
                 <img src="img/3.svg" alt="" class="illu_earty">
             </div>
@@ -102,20 +96,75 @@
         <section id="section_cartes">
 
             <div class="haut row_cartes">
-                <div class="carte">
-                    <div class="haut_carte">
-                        <div class="img_carte"></div>
+                <a href="transport.html">
+                    <div class="carte">
+                        <div class="haut_carte">
+                            <div class="img_carte"><img src="img/avion.svg" alt=""></div>
+                        </div>
+                        <div class="bas_carte">
+                            <h2>Transport</h2>
+                            <p class="mb">En France, près d’un quart de la pollution vient...</p>
+                        </div>
                     </div>
-                    <div class="bas_carte"></div>
-                </div>
-                <div class="carte"></div>
-                <div class="carte"></div>
+                </a>
+
+
+                <a href="consommation.html">
+                    <div class="carte">
+                        <div class="haut_carte">
+                            <div class="img_carte"><img src="img/bouteille.svg" alt=""></div>
+                        </div>
+                        <div class="bas_carte">
+                            <h2>Consommation
+                                d’eau</h2>
+                            <p class="mb">La pollution de l’eau est un problème qui nous...</p>
+                        </div>
+                    </div>
+                </a>
+                <a href="energie.html">
+                    <div class="carte">
+                        <div class="haut_carte">
+                            <div class="img_carte"><img src="img/pc.svg" alt=""></div>
+                        </div>
+                        <div class="bas_carte">
+                            <h2>Énergie Numérique</h2>
+                            <p class="mb">Aujourd’hui, une partie de la pollution mondiale vient...</p>
+                        </div>
+                    </div>
+                </a>
+
+
+
+
+
+
+
             </div>
 
 
             <div class="row_cartes">
-                <div class="carte"></div>
-                <div class="carte"></div>
+                <a href="plastique.html">
+                    <div class="carte">
+                        <div class="haut_carte">
+                            <div class="img_carte"><img src="img/sac.svg" alt=""></div>
+                        </div>
+                        <div class="bas_carte">
+                            <h2>Plastique</h2>
+                            <p class="mb">Chaque année, environ 8 millions de tonnes...</p>
+                        </div>
+                    </div>
+                </a>
+                <a href="alimentation.html">
+                    <div class="carte">
+                        <div class="haut_carte">
+                            <div class="img_carte"><img src="img/burger.svg" alt=""></div>
+                        </div>
+                        <div class="bas_carte">
+                            <h2>Alimentation</h2>
+                            <p class="mb">L'élevage intensif menace le climat avec...</p>
+                        </div>
+                    </div>
+                </a>
             </div>
 
         </section>
