last version homepage

--- a/accueil.html
+++ b/accueil.html
@@ -116,7 +116,7 @@
                 </a>
 
 
-                <a href="transport.html">
+                <a href="consommation.html">
                     <div class="carte">
                         <div class="haut_carte">
                             <div class="img_carte"><img src="img/bouteille.svg" alt=""></div>
@@ -128,7 +128,7 @@
                         </div>
                     </div>
                 </a>
-                <a href="transport.html">
+                <a href="energie-numerique.html">
                     <div class="carte">
                         <div class="haut_carte">
                             <div class="img_carte"><img src="img/pc.svg" alt=""></div>
@@ -150,7 +150,7 @@
 
 
             <div class="row_cartes">
-                <a href="transport.html">
+                <a href="plastique.html">
                     <div class="carte">
                         <div class="haut_carte">
                             <div class="img_carte"><img src="img/sac.svg" alt=""></div>
@@ -161,7 +161,7 @@
                         </div>
                     </div>
                 </a>
-                <a href="transport.html">
+                <a href="alimentation.html">
                     <div class="carte">
                         <div class="haut_carte">
                             <div class="img_carte"><img src="img/burger.svg" alt=""></div>
