:memo: good url

--- a/index.html
+++ b/index.html
@@ -12,11 +12,11 @@
     <body>
         <section class="container">
 
-            <video controls autoplay muted class="video">
-                <source src="MOTION_BANNER.mp4" type="video/mp4" />
+            <video controls autoplay muted="false" class="video">
+                <source src="Audio_Motion_nuit_de_linfo_-_16x9.mp4" type="video/mp4" />
                 <p>
                   Votre navigateur ne prend pas en charge les vidéos HTML5. Voici
-                  <a href="MOTION_BANNER.mp4">un lien pour télécharger la vidéo</a>.
+                  <a href="Audio_Motion_nuit_de_linfo_-_16x9.mp4">un lien pour télécharger la vidéo</a>.
                 </p>
             </video>
 
