--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 
         <p>Voulez-vous sauvez Earty ?</p>
 
-        <a href="question.html" class="Btn" id="O">Oui</a>
+        <a href="./Quizz/quizz.html" class="Btn" id="O">Oui</a>
         <a href="accueil.html" class="Btn" id="N">Non</a>
     </section>
 </body>
